Bug 448953 - X11 - 'Pointer acceleration' options are missing from Touchpad KCM depending on the way used to open it
Summary: X11 - 'Pointer acceleration' options are missing from Touchpad KCM depending ...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_touchpad (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 461332 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-22 13:54 UTC by Patrick Silva
Modified: 2025-01-24 23:29 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
'Acceleration profile' options are available (115.46 KB, image/png)
2022-01-22 13:54 UTC, Patrick Silva
Details
'Acceleration profile' options are not available (100.20 KB, image/png)
2022-01-22 13:55 UTC, Patrick Silva
Details
screen recording (1.23 MB, video/webm)
2022-09-24 12:20 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-01-22 13:54:54 UTC
Created attachment 145756 [details]
'Acceleration profile' options are available

STEPS TO REPRODUCE
1. set System Settings to sidebar view
2. open Touchpad KCM in these ways:
via kickoff
via krunner
via System Settings
via 'kcmshell5 kcm_touchpad' command
3. observe if 'Acceleration profile' options are available or not
4. set System Settings to icon view mode
4. repeat the steps 2 and 3

OBSERVED RESULT
sometimes 'Acceleration profile' options are avaialable, sometimes they are not.
Please compare the attached screenshots.

EXPECTED RESULT
'Acceleration profile' options are always available

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.3
Graphics Platform: X11
Comment 1 Patrick Silva 2022-01-22 13:55:35 UTC
Created attachment 145757 [details]
'Acceleration profile' options are not available
Comment 2 galder 2022-01-22 17:29:38 UTC
I can confirm this issue. Opening the Touchpad window via krunner the 'Acceleration profile' options disappear.
my version are :
plasma 5.23.5 and 5.24.80

Regards,
Galder
Comment 3 Nate Graham 2022-01-28 04:18:06 UTC
I can reproduce all of that.
Comment 4 Alex 2022-09-24 06:35:39 UTC
I checked this in Plasma 5.25.5 (Fedora 36), all methods I tried show the "Pointer acceleration" slider.

Can you please re-test?

If there are some situations where the control is missing, can you please specifically list how to reproduce those?

Thanks.
Comment 5 Alex 2022-09-24 06:37:52 UTC
Sorry I misunderstood the issue. I din't get the "Acceleration profile" control at all on any method I tried. But I'm not sure that we even need this field anyway given that the user can just set "Pointer acceleration" to 0 if they don't want acceleration.
Comment 6 Patrick Silva 2022-09-24 12:20:04 UTC
Created attachment 152383 [details]
screen recording

Sometimes 'Acceleration profile' options are available after opening System Settings and then going to Touchpad KCM, sometimes they aren't. And 'Acceleration profile' options consistently appear after the steps below seen in the screen recording attached to this comment.

1. open System Settings > Input Devices > Touchpad KCM - sometimes the 'Acceleration profile' options are available after this step, sometimes they are not
2. if the 'Acceleration profile' options aren't available, change 'Pointer acceleration' setting
3. go to another KCM without applying the change - apply/discard dialog shows up
4. click on 'Discard' button
5. go back to Touchpad KCM - now the 'Acceleration profile' options are available
Comment 7 Patrick Silva 2022-09-24 12:28:20 UTC
And the 'Acceleration profile' options are always missing when I open the KCM by other ways (kickoff, krunner and CLI).
Comment 8 Nate Graham 2022-11-04 18:37:31 UTC
*** Bug 461332 has been marked as a duplicate of this bug. ***
Comment 9 Patrick Silva 2023-11-16 21:29:25 UTC
The acceleration options are missing when I open the kcm via System Settings or with the following command:

$ kcmshell6 kcm_touchpad

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.81.0
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Graphics Platform: X11
Comment 10 fanzhuyifan 2024-01-30 06:36:48 UTC
'Acceleration profile' seems to have been renamed to 'Pointer acceleration' in https://invent.kde.org/plasma/plasma-desktop/-/commit/4ef30aeb1161a989b3d21b01a928ac037b31c34b

So updating the title accordingly.
Comment 11 Nate Graham 2024-03-04 19:23:35 UTC
Demoting this from being a 15-minute bug since the X11 session is no longer default in Plasma 6.
Comment 12 Bug Janitor Service 2025-01-02 22:09:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2689
Comment 13 Bug Janitor Service 2025-01-17 19:20:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2730
Comment 14 Jakob Petsovits 2025-01-24 06:35:46 UTC
Git commit 295b8e616d5bc9fb8604d492fc53b5a4eeaeb1c1 by Jakob Petsovits.
Committed on 24/01/2025 at 06:23.
Pushed by jpetso into branch 'master'.

kcms/touchpad: Make sure settings fields in X11 are not randomly missing

We will now load X11 props early for constants like "supports $xyz".

Before this, if QML makes use of a property during initialization,
it may incorrectly assume "unsupported" for a given libinput feature
and subsequent "load" calls won't fix that value, as its `Q_PROPERTY`
declaration marks it as `CONSTANT`.

So let's move anything into the device (LibinputTouchpad) constructor
that determines a `Q_PROPERTY` without change notifications.

A number of accessors for "supported" flags are simplified because
their .val boolean is sufficient by itself, remaining at their
default `false` value if the feature is unavailable.

M  +43   -31   kcms/touchpad/backends/x11/libinputtouchpad.cpp
M  +10   -10   kcms/touchpad/backends/x11/libinputtouchpad.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/295b8e616d5bc9fb8604d492fc53b5a4eeaeb1c1
Comment 15 Jakob Petsovits 2025-01-24 06:46:29 UTC
Git commit 10b6daa59e86bdb60ea29e927802673f453fecbf by Jakob Petsovits.
Committed on 24/01/2025 at 06:36.
Pushed by jpetso into branch 'Plasma/6.3'.

kcms/touchpad: Make sure settings fields in X11 are not randomly missing

We will now load X11 props early for constants like "supports $xyz".

Before this, if QML makes use of a property during initialization,
it may incorrectly assume "unsupported" for a given libinput feature
and subsequent "load" calls won't fix that value, as its `Q_PROPERTY`
declaration marks it as `CONSTANT`.

So let's move anything into the device (LibinputTouchpad) constructor
that determines a `Q_PROPERTY` without change notifications.

A number of accessors for "supported" flags are simplified because
their .val boolean is sufficient by itself, remaining at their
default `false` value if the feature is unavailable.


(cherry picked from commit 295b8e616d5bc9fb8604d492fc53b5a4eeaeb1c1)

Co-authored-by: Jakob Petsovits <jpetso@petsovits.com>

M  +43   -31   kcms/touchpad/backends/x11/libinputtouchpad.cpp
M  +10   -10   kcms/touchpad/backends/x11/libinputtouchpad.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/10b6daa59e86bdb60ea29e927802673f453fecbf