kcms/touchpad: load X11 props early for constants like "supports $xyz"

Before this, if QML makes use of a property during initialization,
it may incorrectly assume "unsupported" for a given libinput feature
and subsequent "load" calls won't fix that value, as its `Q_PROPERTY`
declaration marks it as `CONSTANT`.

So let's move anything into the device (LibinputTouchpad) constructor
that determines a `Q_PROPERTY` without change notifications.

A number of accessors for "supported" flags are changed to rely
solely on these early-loading values. Others are simplified because
their .val boolean is sufficient by itself, remaining at their
default `false` value if the feature is unavailable.

BUG: 448953